--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,42 +1,19 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
+html,body {
   padding: 0;
   margin: 0;
-}
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  background-color: #f0f0f0;
+  /* Updated: Soft grey background */
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+  /* Body text in dark gray */
+  line-height: 1.6;
+  scroll-behavior: smooth;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  /*fixing scrolling issue*/
+  height: 100%;
+  overflow-y: auto;
+  /* Allows normal scrolling but prevents excessive empty space */
+
 }
